# Festa-Crawling

./: Dockerfile  README.md  clean_db.py  cron  crontab  deploy-docker.py  festa api 문서 최신.md  pyproject.toml
.cert/: JV8bDsQr3gBAgfZO5k-eSdt5I-P4p33FwqyvOPbJuLA  NfoG0RPDEjb7uWTwPGJLQNwVOru33oDUffdatAT0EiU
.config/: festa.nginx  gunicorn.py  supervisord.conf
app/: Untitled.ipynb  boto3.ipynb
app/config/: settings.py  urls.py
app/festalist/: admin.py  apis.py  apps.py  models.py  serializers.py  urls.py
app/festalist/apis/: api_view.py
app/festalist/migrations/: 0001_initial.py  0002_auto_20200305_1751.py  0002_festalist_link.py  0002_festalist_user.py  0002_festalistkeyword_user.py  0002_remove_festalist_user.py  0003_auto_20200309_1711.py  0003_festalistkeyword.py  0004_festalistkeyword_event.py  0005_auto_20200309_1400.py  0006_auto_20200309_1401.py  0007_auto_20200309_1410.py  0008_auto_20200309_1413.py  0009_auto_20200309_2104.py  0010_auto_20200311_2041.py  0011_auto_20200312_1329.py  0012_auto_20200312_2159.py
app/festalist/views/: api_view.py
app/festascraper/: scrapy.cfg
app/festascraper/festascraper/: items.py  middlewares.py  output.json  pipelines.py  settings.py
app/festcp/: output.json  scrapy-cron.py  scrapy.cfg  spider-local.py
app/festcp/festcp/: items.py  middlewares.py  output.json  pipelines.py  settings.py
app/members/: admin.py  apis.py  backends.py  forms.py  models.py  serializers.py  urls.py  views.py
app/members/migrations/: 0001_initial.py  0002_auto_20200311_1250.py  0003_auto_20200311_1256.py  (+6 more)
app/templates/: base.html
(+6 files in other folders)
