[tool.poetry]
name = "festa-crawling"
version = "0.1.0"
description = ""
authors = ["parkhongbeen <pack122@naver.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "<3.0"
djangorestframework = "^3.11.0"
notebook = "^6.0.3"
django-extensions = "^2.2.8"
model_bakery = "^1.1.0"
gunicorn = "^20.0.4"
requests = "^2.23.0"
Pillow = "^7.0.0"
beautifulsoup4 = "^4.8.2"
bs4 = "^0.0.1"
boto3 = "^1.12.4"
scrapy = "^1.8.0"
psycopg2-binary = "^2.8.4"
supervisor = "^4.1.0"
selenium = "^3.141.0"
scrapy-djangoitem = "^1.1.1"
django-allauth = "^0.41.0"
django-cors-headers = "^3.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
